fix inconsistent dark mode list titles

--- a/resources/css/webapp.scss
+++ b/resources/css/webapp.scss
@@ -352,7 +352,7 @@ img.texture-img {
 	color: white;
 }
 
-.theme--dark .v-list-item__title {
+.theme--dark .v-list--nav .v-list-item__title {
 	color: white;
 }
 
